# xianyu-auto

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  docker-compose.yml  openclaw.json  需求规格说明书.md
backend/: Dockerfile  alembic.ini  cookies.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  README.md
backend/app/: main.py
backend/app/api/: accounts.py  accounts_router.py  admin_router.py  alerts.py  alerts_router.py  backup_router.py  blacklist_router.py  cards.py  cards_router.py  logs.py  logs_router.py  messages.py  messages_router.py  orders.py  orders_router.py  products.py  products_router.py  statistics.py  statistics_router.py
backend/app/core/: config.py  database.py  redis.py
backend/app/models/: __init__.py  account.py  admin.py  alert.py  blacklist.py  card.py  log.py  message.py  order.py  product.py  setting.py
backend/app/services/: account_service.py  alert_service.py  card_service.py  claude_client.py  email_service.py  log_service.py  message_service.py  order_service.py  playwright_client.py  product_service.py  rate_limiter.py
backend/app/tasks/: auto_delivery.py  auto_reply.py  auto_routine.py  scheduler.py
backend/scripts/: check_login_status.py  extract_cookies.py
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/ai/: minimax.py
backend/src/api/: accounts.py  backup.py  card_keys.py  messages.py  orders.py  products.py  settings.py
backend/src/browser/: __init__.py
backend/src/models/: __init__.py  alert.py  (+8 more)
(+105 files in other folders)
